@@ -62,3 +62,4 @@ v 1.5:
 	- Added Info node support to Global Groups.
 	- Fixed an error on 'manucheckv'. If the users doesn't have the variable it fell through causing an exception.
 	- Added checking of subgroups for Info nodes.
+	- Expanded 'canUserBuild()' to include inheritance and subgroups.
